# NXLoader

./: .gitignore  README.md  com.github.XtremeTHN.NXLoader.json  com.github.XtremeTHN.NXLoader.json~  flake.nix  homebrew.nsp  meson.build  meson_options.txt  net.py  run  test.py  test_net.py  test_usb.py  usb.py  usbInstall.py  usb_pc_install.py
data/: 99-nxloader-switch.rules  com.github.XtremeTHN.NXLoader.desktop.in  com.github.XtremeTHN.NXLoader.gschema.xml  com.github.XtremeTHN.NXLoader.metainfo.xml.in  com.github.XtremeTHN.NXLoader.service.in  meson.build
data/icons/: meson.build
mockups/romitem/: main.blp  main.css  settings
modules/: logs.py  net.py  net_new.py  net_requests.py
po/: POTFILES.in  meson.build
src/: main.py  meson.build  nxloader.gresource.xml  nxloader.in  usbInstall.py  window.py
src/modules/: glist.py  meson.build  rom_info.py  switchfinder.py  task.py  usbInstall.py  utils.py  window.py
src/ui/: circularprogress.py  dialogs.py  exception_dialog.py  get_started_dialog.py  meson.build  not_found.py  rom_info.py  roms_page.py  style.css  window.blp  window.py
src/ui/blueprints/: exception-dialog.blp  get-started-dialog.blp  meson.build  not-found-page.blp  rom.blp  roms-box.blp  roms-page.blp  roms_page.blp  upload-alert.blp  window.blp
